--- a/update_screen/update_screen.css
+++ b/update_screen/update_screen.css
@@ -38,5 +38,5 @@ button{
     color: #F4EAE6;
     font-weight: bolder;
     font-size: 1rem;
-    
+    cursor: pointer;
 }
